--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ name: build
 on:
   push:
     branches:
+      - main        # The default branch
+      - branch-*    # The other branches to be analyzed
       - '**'
     paths-ignore:
       - '**.md'
